Fix problem of modal jumping to top of page

--- a/pages/_assets/css/main.css
+++ b/pages/_assets/css/main.css
@@ -187,7 +187,7 @@
 .modal.active.notification .modal-content {
   top: 0%;
 }
-body.modal {
+html.modal {
   overflow-y: hidden;
 }
 .modal > ::-webkit-scrollbar, .md-content > ::-webkit-scrollbar {
